--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,7 @@ dependencies:
   carousel_slider: ^2.3.1
   json_serializable: ^3.5.1
   percent_indicator: "^2.1.7+2"
+  http: ^0.12.0+2
 
 
   # The following adds the Cupertino Icons font to your application.
