--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,7 @@ dependencies:
   json_serializable: ^3.5.1
   percent_indicator: "^2.1.7+2"
   http: ^0.12.0+2
+  video_player: ^2.1.14
 
 
   # The following adds the Cupertino Icons font to your application.
