--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,7 +28,9 @@ dependencies:
   percent_indicator: "^2.1.7+2"
   http: ^0.12.0+2
   video_player: ^2.1.14
-
+  hexcolor: ^2.0.5
+  input_history_text_field: ^0.0.9
+  autocomplete_textfield: ^1.6.4
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
