--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,8 @@ dependencies:
   hexcolor: ^2.0.5
   input_history_text_field: ^0.0.9
   autocomplete_textfield: ^1.6.4
+  material_floating_search_bar: ^0.1.7
+
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
