--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,12 +26,16 @@ dependencies:
   carousel_slider: ^2.3.1
   json_serializable: ^3.5.1
   percent_indicator: "^2.1.7+2"
-  http: ^0.12.0+2
+  http: ^0.12.1
   video_player: ^2.1.14
   hexcolor: ^2.0.5
   input_history_text_field: ^0.0.9
   autocomplete_textfield: ^1.6.4
   material_floating_search_bar: ^0.1.7
+  shared_preferences: ^0.5.8
+  get: ^3.15.0
+  splashscreen: ^1.3.5
+
 
 
   # The following adds the Cupertino Icons font to your application.
