--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,10 @@ dependencies:
   splashscreen: ^1.3.5
   dio: 1.0.0
   dropdown_search: ^0.6.3
+  firebase_core: 
+  firebase_messaging:
+  flutter_local_notifications: 
+  cached_network_image: 
 
 
 
